# gba-sprite-engine

./: CMakeLists.txt  README.md
demos/demo1-basicfeatures/src/: ff.h  flying_stuff_scene.cpp  kul.h  sample_start_scene.cpp
demos/project/: CMakeLists.txt
demos/project/src/: CharSelectScene.cpp  CharSelectScene.h  GameOverScene.cpp  GameOverScene.h  MainGameScene.cpp  MainGameScene.h  MiniGameScene.cpp  MiniGameScene.h  README.md  StartScene.cpp  StartScene.h  main.cpp
demos/project/src/recourses/backgrounds/: charSelectScreen.h  gameOverScreen.h  miniGameScreen.h  shroomCity.h  startScreen.h
demos/project/src/recourses/sounds/: backgroundMusic.h  gameOverSound.h  youWin.h
demos/project/src/recourses/sprites/: bulletBil.h  hand.h  luigi.h  luigiSel.h  mario.h  marioSel.h  peach.h  start.h  yoshiSel.h
engine/: CMakeLists.txt
engine/src/: gba_engine.cpp
test/: real_data.h
